--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     </style>
   </head>
   <body>
-    <img src="./static_images/Logo.png" class="center">
+    <img src="./static_images/logo_maldiciones.png" class="center">
   </body>
 </html>
