--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Maldiciones::Inicio</title>
     <style>
+      body {
+        background-color: #ffe6f2;
+      }
       .center {
   display: block;
   margin-left: auto;
