--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
   <head>
     <title>Maldiciones::Inicio</title>
+    <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
     <style>
       body {
         background-color: #ecc6d9;
