--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
     <style>
       body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
         background-color: #ecc6d9;
-      }
-      .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
+
+      /* Estilos para las imágenes dentro del contenedor */
+.contenedor img {
+  display: block;
+  margin: 0 auto; /* Centra la imagen horizontalmente */
+}
+
+
 
 
 
@@ -76,7 +84,7 @@
     </style>
   </head>
   <body>
-    <img src="./static_images/logo_maldiciones.png" class="center">
+    <img src="./static_images/logo_maldiciones.png">
     <a href="./coleccionesLibros/index.html" class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>Colecciones de Libros</a>
     <button class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>Colecciones de Libros</button>
   </body>
