--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
 }
     </style>
   </head>
-  <body>
+  <body>  
+    <div class="contenedor">
     <img src="./static_images/logo_maldiciones.png">
     <a href="./coleccionesLibros/index.html" class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>Colecciones de Libros</a>
     <button class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>Colecciones de Libros</button>
+    </div>
   </body>
 </html>
