--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
     <style>
       body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
+   text-align: center;
         background-color: #ecc6d9;
+}
+
+      /* Estilos para el contenedor principal */
+.contenedor {
+  width: 250px;
+  margin: 0 auto; /* Centra el div horizontalmente en la página */
+
 }
 
       /* Estilos para las imágenes dentro del contenedor */
 .contenedor img {
   display: block;
   margin: 0 auto; /* Centra la imagen horizontalmente */
+  margin-top:20px;
 }
 
 
@@ -46,6 +50,7 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  margin-top:20px;
 }
 
 .button-56:after {
@@ -87,7 +92,7 @@
     <div class="contenedor">
     <img src="./static_images/logo_maldiciones.png">
     <a href="./coleccionesLibros/index.html" class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>Colecciones de Libros</a>
-    <button class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>Colecciones de Libros</button>
+    <a href="" class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>Colecciones de Libros</button>
     </div>
   </body>
 </html>
