--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="contenedor">
     <img src="./static_images/logo_maldiciones.png">
     <a href="./coleccionesLibros/index.html" class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>Colecciones de Libros</a>
-    <a href="" class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>Colecciones de Libros</button>
+    <a href="" class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>Colecciones de Libros</a>
     </div>
   </body>
 </html>
