--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
       /* Estilos para el contenedor principal */
 .contenedor {
-  width: 250px;
+  width: 270px;
   margin: 0 auto; /* Centra el div horizontalmente en la página */
 
 }
@@ -91,8 +91,8 @@
   <body>  
     <div class="contenedor">
     <img src="./static_images/logo_maldiciones.png">
-    <a href="./coleccionesLibros/index.html" class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>Colecciones de Libros</a>
-    <a href="" class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>Colecciones de Libros</a>
+    <a href="./coleccionesLibros/index.html" class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>&nbsp;Colecciones de Libros</a>
+    <a href="" class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>&nbsp;Colecciones de Libros</a>
     </div>
   </body>
 </html>
