--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
       /* Estilos para el contenedor principal */
 .contenedor {
-  width: 270px;
+  width: 300px;
   margin: 0 auto; /* Centra el div horizontalmente en la página */
 
 }
@@ -92,7 +92,8 @@
     <div class="contenedor">
     <img src="./static_images/logo_maldiciones.png">
     <a href="./coleccionesLibros/index.html" class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>&nbsp;Colecciones de Libros</a>
-    <a href="" class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>&nbsp;Colecciones de Libros</a>
+    <a href="./fattoriaMcKenzie/index.html" class="button-56" role="button"><i class="em em-wolf" aria-role="presentation" aria-label="WOLF FACE"></i>&nbsp;Fattoria McKenzie</a>
+    <a href="./zipizape/index.html" class="button-56" role="button"><i class="em em-closed_book" aria-role="presentation" aria-label="CLOSED BOOK"></i>&nbsp;Zipi y Zape</a>
     </div>
   </body>
 </html>
