--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
   <head>
     <title>Maldiciones::Inicio</title>
+
+    <link rel="icon" href="static_images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="static_images/favicon.ico" type="image/x-icon">
+
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
     <style>
       body {
