--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <img src="./static_images/logo_maldiciones.png">
     <a href="./coleccionesLibros.html" class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>&nbsp;Colecciones de Libros</a>
     <a href="./fattoriaMcKenzie.html" class="button-56" role="button"><i class="em em-wolf" aria-role="presentation" aria-label="WOLF FACE"></i>&nbsp;Fattoria McKenzie</a>
-    <a href="./zipizape/index.html" class="button-56" role="button"><i class="em em-closed_book" aria-role="presentation" aria-label="CLOSED BOOK"></i>&nbsp;Zipi y Zape</a>
+    <a href="./zipizape.html" class="button-56" role="button"><i class="em em-closed_book" aria-role="presentation" aria-label="CLOSED BOOK"></i>&nbsp;Zipi y Zape</a>
+    <a href="./13BrugueraBackup/seronoser.free.fr/bruguera/index.htm" class="button-56" role="button"><i class="em em-crystal_ball" aria-role="presentation" aria-label="CRYSTAL BALL"></i>&nbsp;Backup 13 Rue Bruguera</a>
+
     </div>
   </body>
 </html>
