Arreglado css de Colecciones

--- a/coleccionesLibros.html
+++ b/coleccionesLibros.html
@@ -2,18 +2,145 @@
 
   <head>
     <title>Maldiciones::Colecciones De Libros</title>
+    <meta charset="utf-8" emacsmode="-*- markdown -*-">
+    <meta lang="es">
+    
 
     <link rel="icon" href="static_images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="static_images/favicon.ico" type="image/x-icon">
 
-    <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
-    <link href="mycss.css" rel="stylesheet">
+    <!-- <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="websiteColeccionesLibros.css">
 
   </head>
   <body>  
-    <div class="contenedor">
-    <img src="./static_images/logo_maldiciones_horizontal.png">
 
-    </div>
+
+                          **Maldiciones :: Colecciones de Libros**
+
+This is a sample style sheet for a website with a fixed menu on the left side of the screen and
+a banner at the top.
+
+
+Editorial Molino
+==============================================================
+You could describe your product or project here. I'll instead 
+use a paraphrased excerpt from The Charter as a placeholder:
+
+
+Attendu que le Canada est fondé sur des principes qui reconnaissent la suprématie de Dieu et la primauté du droit:
+
+Selecciones Biblioteca Oro
+--------------------------------------------------------------
+
+| Núm | Título | Autor    |
+|-------|------|----------|
+| 001 | La liga de los asustados. | Rex Stout|
+| 001 |Horizontes perdidos. | James Hilton|
+| 001 |Trágica murmuración. | Mabel Seeley|
+| 001 |El camino de hierro. | Rex Beach|
+| 001 |Asesinato en el Orient Express. | Agatha Christie|
+| 001 |Dos horas en blanco. | Woodward y Ambherst|
+| 001 |La canción de la flecha. | Edison Marshall|
+| 001 |Detective por correspondencia. | Raymond Chandler|
+| 001 |El camino de oro. | Ernest Haycox|
+| 001 |Toque de difuntos. | Charlotte Murray|
+| 001 |El imperturbable Sr. Moto. | J.P. Marquand|
+| 001 |Detective sin licencia. | G. Nyland|
+| 001 |El asesinato de Rogelio Ackroid. | Agatha Christie|
+| 001 |El enigma de los estudios Mammoth. | Stuart Palmer|
+| 001 |Diez negritos. | Agatha Christie|
+| 001 |Los caprichos del azar. | Rex Beach|
+| 001 |Crimen en la noche. | Isabel Garland|
+| 001 |El criado chino. | Earl Derr Biggers|
+| 001 |La casa en la azotea. | M.G. Eberhart|
+| 001 |Huracán. | Ch. Nordhoff y J.N. Hall|
+| 001 |El joven doctor Kildare. | Max Brand|
+| 001 |El zafiro. | A.E.W. Mason|
+| 001 |Oro. | S. Edward White|
+| 001 |Victoria Pruitt viene a la ciudad. | Ruth Gilbert Cochran|
+| 001 |La hija del Viking. | Frank H. Shaw|
+| 001 |Cianuro espumoso. | Agatha Christie|
+| 001 |El comandante Gaunt. | Humprey Jordan|
+| 001 |Un hombre muerto. | Ngaio Marsh.|
+| 001 |Cita con la muerte. | Agatha Christie.|
+| 001 |Pesadilla. | Leslie Edgley|
+| 001 |El pantano de la muerte. | Vereen Bell|
+| 001 |El caso de la cleptómana.|  Erle Stanley Gardner|
+| 001 |Cincuenta velas. | Earl Derr Biggers|
+| 001 |Al muerto le crece la barba. |  M. Scherff|
+| 001 |Los buitres se reúnen. |  Anne Hocking|
+| 001 |Nick de Nueva York. |  E. Phillips Oppenheim|
+| 001 |El misterio del tren azul. | Agatha Christie|
+| 001 |Muerte en la boda. |  Anne Hocking|
+| 001 |Hombres de las islas. | Rex Beach|
+| 001 |El asesinato del casino. | S.S. Van Dine|
+| 001 |Heridas sin cicatrizar. | Muir y Tollemache|
+| 001 |El loro chino. | Earl Derr Biggers|
+| 001 |Un triste ciprés. | Agatha Christie|
+| 001 |El caso de las garras de terciopelo. | Erle Stanley Gardner|
+| 001 |El cadáver con lentes. | Dorothy L. Sayers|
+| 001 |Maldad bajo el sol. | Agatha Christie|
+| 001 |Juan el negro. | James B. Hendryx|
+| 001 |Elenigmático My. Quin. | Agatha Christie|
+| 001 |La casa sin llaves. | Earl Derr Biggers|
+| 001 |El burro de plata. | Frank Gruber|
+| 001 |La pincelada final. |  Anne Hocking|
+| 001 |Un cadáver en la biblioteca. | Agatha Christie|
+| 001 |Ana Carmeny. | Hoffman Birney|
+| 001 |El hombre sin nervios. |  E. Phillips Oppenheim|
+| 001 |El alegre propietario de la funeraria. | M. M. Raison.|
+| 001 |La barrera. | Rex Beach|
+| 001 |El caso de las piernas bonitas.|  Erle Stanley Gardner|
+| 001 |Cinco cerditos. | Agatha Christie|
+| 001 |La sonrisa de Moran. |  E. Phillips Oppenheim|
+| 001 |Malas acciones realizadas. |  Anne Hocking|
+| 001 |El verdugo espera. | Valentine Villiams|
+| 001 |La muerte visita «Los Cedros». |  Anne Hocking|
+| 001 |El caso de la joven arisca.|  Erle Stanley Gardner|
+| 001 |Burbujas de hechicería. | George Goodchild|
+| 001 |El caso del secuestro. | S.S. Van Dine|
+| 001 |Demasiados cocineros. | Rex Stout|
+| 001 |El misterio del café Domdaniel. | S.S. Van Dine|
+| 001 |Un cuchillo en mi espalda. | S. Merwin Jr.|
+| 001 |La banda de la «Rana». |Edgard Wallace|
+| 001 |El crimen del club de golf. |Jerome Fox|
+| 001 |El caso de la tachuela verde. |Teodora du Bois|
+| 001 |El misterio de la mandarina. |Ellery Queen|
+| 001 |La segunda confesión. | Rex Stout|
+| 001 |Siete tabernas de Marsella. |  E. Phillips Oppenheim|
+| 001 |Matrimonio de sabuesos. | Agatha Christie|
+| 001 |El caso del perro aullador. | Erle Stanley Gardner|
+| 001 |El misterio de la lubina. | Edward Lee|
+| 001 |El visitante de medianoche. | S.S. Van Dine|
+[Tabla [states]: Caption with label.]
+
+
+Team
+==============================================================
+
+- CEO and Cofounder
+- CTO and Cofounder
+- Awesome Coders
+- Marketing Person
+
+ Maine | Iowa | Colorado 
+-------|------|----------
+   1   |  4   |   10
+  ME   |  IA  |   CO
+ Blue  | Red  | Brown
+[Table [states]: Caption with label.]
+
+About
+==============================================================
+
+The faux-logo icon in the banner is from 
+[Freepik](https://www.freepik.com)
+and licensed under [CC 3.0 BY](http://creativecommons.org/licenses/by/3.0).
+Replace `website-banner.png` in the CSS file to replace it with your own.
+
+
+<style class="fallback">body{visibility:hidden}</style><script>markdeepOptions={tocStyle:'long'};</script>
+<!-- Markdeep: --><script src="markdeep.min.js" charset="utf-8"></script>
   </body>
 </html>
