Update index.html con ASCII TABLE y ed2k

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <a href="./fattoriaMcKenzie.html" class="button-56" role="button"><i class="em em-wolf" aria-role="presentation" aria-label="WOLF FACE"></i>&nbsp;Fattoria McKenzie</a>
     <a href="./zipizape.html" class="button-56" role="button"><i class="em em-closed_book" aria-role="presentation" aria-label="CLOSED BOOK"></i>&nbsp;Zipi y Zape</a>
     <a href="./13BrugueraBackup/seronoser.free.fr/bruguera/index.htm" class="button-56" role="button"><i class="em em-crystal_ball" aria-role="presentation" aria-label="CRYSTAL BALL"></i>&nbsp;Backup 13 Rue Bruguera</a>
+    <a href="./ASCII_Table_Generator.html" class="button-56" role="button"><i class="em em-alien" aria-role="presentation" aria-label="EXTRATERRESTRIAL ALIEN"></i>&nbsp;ASCII Table Generator.html</a>
+    <a href="./ed2k.html" class="button-56" role="button"><i class="em em-abc" aria-role="presentation" aria-label="INPUT SYMBOL FOR LATIN LETTERS"></i>&nbsp;Links ed2k a html</a>
 
     </div>
   </body>
