--- a/fattoriaMcKenzie.html
+++ b/fattoriaMcKenzie.html
@@ -25,6 +25,10 @@ Collezione
 ==============================================================
 You could describe your product or project here. I'll instead 
 use a paraphrased excerpt from The Charter as a placeholder:
+    <!-- Incluyendo el contenido de uno.md.html -->
+    <script type="text/markdeep">
+    [include: uno.md.html]
+    </script>
 Una Coleccion
 --------------------------------------------------------------
 You could describe your product or project here. I'll instead 
