--- a/fattoriaMcKenzie.html
+++ b/fattoriaMcKenzie.html
@@ -25,10 +25,7 @@ Collezione
 ==============================================================
 You could describe your product or project here. I'll instead 
 use a paraphrased excerpt from The Charter as a placeholder:
-    <!-- Incluyendo el contenido de uno.md.html -->
-    <script type="text/markdeep">
-    [include: uno.md.html]
-    </script>
+(insert uno.md.html here)
 Una Coleccion
 --------------------------------------------------------------
 You could describe your product or project here. I'll instead 
