--- a/fattoriaMcKenzie.html
+++ b/fattoriaMcKenzie.html
@@ -25,7 +25,7 @@ Collezione
 ==============================================================
 You could describe your product or project here. I'll instead 
 use a paraphrased excerpt from The Charter as a placeholder:
-(insert uno.md.html here)
+\htmlinclude uno.md.html
 Una Coleccion
 --------------------------------------------------------------
 You could describe your product or project here. I'll instead 
