--- a/fattoriaMcKenzie.html
+++ b/fattoriaMcKenzie.html
@@ -10,7 +10,8 @@
     <link rel="shortcut icon" href="static_images/favicon.ico" type="image/x-icon">
 
     <!-- <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="websiteColeccionesLibros.css">
+    <!-- <link rel="stylesheet" href="websiteColeccionesLibros.css"> -->
+    <link rel="stylesheet" href="https://casual-effects.com/markdeep/latest/journal.css?">
 
   </head>
   <body>  
