--- a/fattoriaMcKenzie.html
+++ b/fattoriaMcKenzie.html
@@ -114,7 +114,7 @@ STORIE
 | 163 | CUCADORES! | 8 |  |  | #074 |  | N051 | 01 Le Storie! |  | NUEVAS NOVELAS |  |  |
 | 164 | SAM FALCO, LA CASA DEI GIOCHI | 8 |  |  | #075 | VITA DA TALPE | N052 | 01 Le Storie! |  | NUEVAS NOVELAS |  |  |
 | 165 | L'INFERMERIA | 8 |  |  | #076 |  | N053 | 01 Le Storie! |  | NUEVAS NOVELAS |  |  |
-| 166 | CUORE DI MAMMA | 8 |  |  | #077 |  | N054 | 01 Le Storie! | 02 | NUEVAS NOVELAS |  | https://3.bp.blogspot.com/-HZcRYME5twQ/WwmCouyanAI/AAAAAAAALzw/NzCJn8sK9MExnkLQqF_xvRHCp38j7IAxwCLcBGAs/s1600/page_CAS6%2B%2528copia%2529.jpg |
+| 166 | CUORE DI MAMMA | 8 |  |  | #077 |  | N054 | 01 Le Storie! | 02 | NUEVAS NOVELAS |  | !(https://3.bp.blogspot.com/-HZcRYME5twQ/WwmCouyanAI/AAAAAAAALzw/NzCJn8sK9MExnkLQqF_xvRHCp38j7IAxwCLcBGAs/s1600/page_CAS6%2B%2528copia%2529.jpg) |
 | 167 | L'ALBERO DI NATALE | 9 |  |  | #078 |  | N055 | 01 Le Storie! |  | NUEVAS NOVELAS |  |  |
 | 168 | VOGLIO TORNARE GIOVANE! | 10 |  |  | #079 |  | N056 | 01 Le Storie! |  | NUEVAS NOVELAS |  |  |
 | 169 | LA DIMORA DEGLI DEI | 10 |  |  | #080 | #389 | N057 | 01 Le Storie! |  | NUEVAS NOVELAS |  | https://2.bp.blogspot.com/-WLt35-k1cdg/WwlTiC8t_eI/AAAAAAAALqs/tnF0VIBUX8Y0iR5OOjICRRzR7XosH8HAACLcBGAs/s1600/N._389_WEB_STORIA_1.jpg |
