--- a/fattoriaMcKenzie.html
+++ b/fattoriaMcKenzie.html
@@ -19,6 +19,8 @@
 
                           **Maldiciones :: Fattoria McKenzie**
 
+!(/static_images/fatto.gif)
+    
 This is a sample style sheet for a website with a fixed menu on the left side of the screen and
 a banner at the top.
 
