--- a/fattoriaMcKenzie.html
+++ b/fattoriaMcKenzie.html
@@ -24,6 +24,8 @@
 This is a sample style sheet for a website with a fixed menu on the left side of the screen and
 a banner at the top.
 
+!(static_images/fatto.gif)
+    
 Collezione
 ==============================================================
 You could describe your product or project here. I'll instead 
