--- a/fattoriaMcKenzie.html
+++ b/fattoriaMcKenzie.html
@@ -19,12 +19,14 @@
 
                           **Maldiciones :: Fattoria McKenzie**
 
-!(/static_images/fatto.gif)
+![qlt5](/static_images/fatto.gif)
     
 This is a sample style sheet for a website with a fixed menu on the left side of the screen and
 a banner at the top.
 
-!(static_images/fatto.gif)
+![qewqwe](static_images/fatto.gif)
+
+![sasa](https://kudomarkos.github.io/maldiciones/static_images/fatto.gif)
     
 Collezione
 ==============================================================
