--- a/fattoriaMcKenzie.html
+++ b/fattoriaMcKenzie.html
@@ -19,12 +19,12 @@
 
                           **Maldiciones :: Fattoria McKenzie**
 
-![qlt5](/static_images/fatto.gif)
+![qlt5](/static_images/fatto.gif =100x200)
     
 This is a sample style sheet for a website with a fixed menu on the left side of the screen and
 a banner at the top.
 
-![qewqwe](static_images/fatto.gif)
+![qewqwe](static_images/fatto.gif =500px)
 
 ![sasa](https://kudomarkos.github.io/maldiciones/static_images/fatto.gif)
     
