--- a/fattoriaMcKenzie.html
+++ b/fattoriaMcKenzie.html
@@ -24,7 +24,7 @@
 This is a sample style sheet for a website with a fixed menu on the left side of the screen and
 a banner at the top.
 
-![qewqwe](static_images/fatto.gif =500px)
+![qewqwe](static_images/fatto.gif =500x)
 
 ![sasa](https://kudomarkos.github.io/maldiciones/static_images/fatto.gif)
     
