--- a/fattoriaMcKenzie.html
+++ b/fattoriaMcKenzie.html
@@ -19,7 +19,7 @@
 
                           **Maldiciones :: Fattoria McKenzie**
 
-![qlt5](/static_images/fatto.gif width="100px" border="2")
+![qlt5](/static_images/fatto.gif =100x)
     
 This is a sample style sheet for a website with a fixed menu on the left side of the screen and
 a banner at the top.
