--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img src="./static_images/logo_maldiciones.png">
     <a href="./coleccionesLibros.html" class="button-56" role="button"><i class="em em-books" aria-role="presentation" aria-label="BOOKS"></i>&nbsp;Colecciones de Libros</a>
     <a href="./fattoriaMcKenzie.html" class="button-56" role="button"><i class="em em-wolf" aria-role="presentation" aria-label="WOLF FACE"></i>&nbsp;Fattoria McKenzie</a>
-    <a href="./zzcatalogoweb/zipizape.html" class="button-56" role="button"><i class="em em-closed_book" aria-role="presentation" aria-label="CLOSED BOOK"></i>&nbsp;Zipi y Zape</a>
+    <a href="./zzcatalogoweb/index.html" class="button-56" role="button"><i class="em em-closed_book" aria-role="presentation" aria-label="CLOSED BOOK"></i>&nbsp;Zipi y Zape</a>
     <a href="./RobinDubois.html" class="button-56" role="button"><i class="em em-bow_and_arrow" aria-role="presentation" aria-label="BOW AND ARROW"></i>&nbsp;Robin Dubois</a>
     <a href="./ASCII_Table_Generator.html" class="button-56" role="button"><i class="em em-alien" aria-role="presentation" aria-label="EXTRATERRESTRIAL ALIEN"></i>&nbsp;ASCII Table Generator.html</a>
     <a href="./ed2k.html" class="button-56" role="button"><i class="em em-abc" aria-role="presentation" aria-label="INPUT SYMBOL FOR LATIN LETTERS"></i>&nbsp;Links ed2k a html</a>
