--- a/zzcatalogoweb/index.html
+++ b/zzcatalogoweb/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <img src="ZZLogo.png" class="logo">
+    <img src="ZZChisteRojo.png" class="rojo">
+    <img src="ZZChisteAmarillo.png" class="amarillo">
     <script src="index.js"></script>
   </body>
 </html>
