--- a/zzcatalogoweb/index.html
+++ b/zzcatalogoweb/index.html
@@ -10,7 +10,7 @@
   <body>
     <img src="ZZLogo.png" class="logo">
     <img src="ZZChisteRojo.png" class="rojo">
-    <img src="ZZChisteAmarillo.png" class="amarillo">
+    <img src="ZZChisteAmarillo.jpg" class="amarillo">
     <script src="index.js"></script>
   </body>
 </html>
