--- a/zzcatalogoweb/index.html
+++ b/zzcatalogoweb/index.html
@@ -5,193 +5,131 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Zipi y Zape Catálogo</title>
-    <style>
-  :root{
-    --max-width: 1200px;
-  }/*
-    .logo {width:700px;}*/
-    .amarillo, .rojo {height:200px;}
-
-
-  body{
-    margin:0;
-    font-family: system-ui, Arial, sans-serif;
-    display:flex;
-    justify-content:center; /* centra el contenedor principal horizontalmente */
-  }
-
-  /* contenedor principal que limita ancho a 1000px */
-  .page {
-    width:100%;
-    max-width:var(--max-width);
-    box-sizing:border-box;
-    padding:16px;
-  }
-
-  /* header */
-  header.site-header{
-    display:flex;
-    flex-direction:column;
-    align-items:center; /* centra la imagen y el contenido horizontalmente */
-    justify-content:center;
-    gap:12px;
-    padding:16px 8px;
-    box-sizing:border-box;
-    border-bottom:1px solid #ddd;
-  }
-
-  /* imagen centrada y limitada al ancho del header */
-  .site-header img{
-    display:block;
-    max-width:100%;      /* nunca excede el contenedor */
-    max-height:250px;    /* evita que sea demasiado alta; ajusta si quieres */
-    width:auto;
-    height:auto;
-    object-fit:contain;
-  }
-
-.site-header p{ text-indent: 3.5em;   text-align: justify;
-  text-justify: inter-word;}
-
-  /* contenido principal con máxima anchura igual (heredado del .page) */
-  main.content{
-    margin-top:16px;
-    padding:16px;
-    box-sizing:border-box;
-  }
-
-  /* ejemplo: limitar la altura del header y del content a 1000px si te refieres a px de ancho/alto máximo */
-  .site-header, main.content {
-    max-width:100%;
-    /* si quisieras también limitar la altura a 1000px: */
-
-    overflow:auto;
-  }
-
-  /* responsive tweaks */
-  @media (max-width:520px){
-    .site-header img{ max-height:120px; }
-  }
-
-.tabulator .tabulator-header .tabulator-col.tabulator-sortable[aria-sort="none"] .tabulator-col-content .tabulator-col-sorter {
-display: none;
+    <style>:root {
+  --max-width: 1200px
 }
-.tabulator-cell {font-size: 10px;}
-.site-header, main.content {
-    max-width: 100%;
-
-    overflow: hidden; /* Cambia a hidden si no quieres desplazamiento */
+.amarillo,
+.rojo {
+  height: 200px
 }
+body {
+  margin: 0;
+  font-family: system-ui,Arial,sans-serif;
+  display: flex;
+  justify-content: center
+}
+.page {
+  width: 100%;
+  max-width: var(--max-width);
+  box-sizing: border-box;
+  padding: 16px
+}
+header.site-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  padding: 16px 8px;
+  box-sizing: border-box;
+  border-bottom: 1px solid #ddd
+}
+.site-header img {
+  display: block;
+  max-width: 100%;
+  max-height: 250px;
+  width: auto;
+  height: auto;
+  object-fit: contain
+}
+.site-header p {
+  text-indent: 3.5em;
+  text-align: justify;
+  text-justify: inter-word
+}
+main.content {
+  margin-top: 16px;
+  padding: 16px;
+  box-sizing: border-box
+}
+.site-header,
+main.content {
+  max-width: 100%;
+
+}
+
+.tabulator .tabulator-header .tabulator-col.tabulator-sortable[aria-sort=none] .tabulator-col-content .tabulator-col-sorter {
+  display: none
+}
+.tabulator-cell {
+  font-size: 10px
+}
+/* Estilo para el overlay de carga */
+#loadingOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8); /* Fondo blanco semitransparente */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999; /* Asegura que está por encima de todo */
+}
+
+.spinner {
+    border: 8px solid #f3f3f3; /* Color de fondo */
+    border-top: 8px solid #3498db; /* Color de la parte superior */
+    border-radius: 50%;
+    width: 50px; /* Tamaño del spinner */
+    height: 50px; /* Tamaño del spinner */
+    animation: spin 1s linear infinite; /* Animación del giro */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 
 </style>
 <link href="https://cdn.jsdelivr.net/npm/tabulator-tables@5.2.7/dist/css/tabulator.min.css" rel="stylesheet">
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/tabulator-tables@5.2.7/dist/js/tabulator.min.js"></script>
   </head>
   <body>
+<div id="loadingOverlay">
+    <div class="spinner"></div>
+</div>
 <div class="page">
     <header class="site-header">
       <img src="ZZLogo.png" alt="Foto del header">
       <h1>Cronología de Historietas de Zipi y Zape</h1>
-      <p>Esta cronología y toda la catalogación necesaria para su realización ha sido posible gracias a la ayuda de los foreros y foreras de los foros <a href="http://lamansion-crg.net/forum/index.php">La Mansión C.R.G.</a> y <a href="https://www.ojodepez-fanzine.net/latiacomforo/index.php">El foro de la T.I.A.</a>. En la columnas de las tablas, después de la fecha se muestra la publicación original donde se estrenó la historieta, después un título a veces extraido de posteriores publicaciones o ST si no llevaba título, trás ese dato podréis leer parte del diálogo de la viñeta derecha, dato que nos ayudó a identificar las historietas, número de tiras o franjas de la historieta TT, número de páginas y a la derecha las demás revistas y colecciones donde se republicaron. Por favor, si aprecias algún error, o crees que falta algún dato, visita esos foros e informanos. Muchas Gracias.</p>
+      <p>Esta cronología y toda la catalogación necesaria para su realización ha sido posible gracias a la ayuda de los foreros y foreras de los foros <a href="http://lamansion-crg.net/forum/index.php">La Mansión C.R.G.</a> y <a href="https://www.ojodepez-fanzine.net/latiacomforo/index.php">El foro de la T.I.A.</a>. En la columnas de las tablas, después de la fecha se muestra la publicación original donde se estrenó la historieta, después un título a veces extraido de posteriores publicaciones o ST si no llevaba título, trás ese dato podréis leer parte del diálogo de la viñeta derecha, dato que nos ayudó a identificar las historietas, número de tiras o franjas de la historieta TT, número de páginas y a la derecha las demás revistas y colecciones donde se republicaron. En estas tablas verás muchas abreviaturas de colecciones y revistas, las explico abajo del todo en la <a href="#leyenda">Leyenda</a>. También indico algunos datos que aún no dispongo en <a href="#dudas">Dudas</a>. Por favor, si aprecias algún error, o crees que falta algún dato, visita esos foros e informanos. Muchas Gracias.</p>
+
     </header>
+<main class="content" id="mainContent">
+    <!-- Aquí se generarán los elementos dinámicamente -->
+</main>
 
-    <main class="content">
-      <h2>1948</h2>
-      <p>...</p>
-<div id="table1948"></div>
-      <h2>1949</h2>
-      <p>...</p>
-<div id="table1949"></div>
-      <h2>1950</h2>
-      <p>...</p>
-<div id="table1950"></div>
-      <h2>1951</h2>
-      <p>...</p>
-<div id="table1951"></div>
-      <h2>1952</h2>
-      <p>...</p>
-<div id="table1952"></div>
-      <h2>1953</h2>
-      <p>...</p>
-<div id="table1953"></div>
-      <h2>1954</h2>
-      <p>...</p>
-<div id="table1954"></div>
-      <h2>1955</h2>
-      <p>...</p>
-<div id="table1955"></div>
-      <h2>1956</h2>
-      <p>...</p>
-<div id="table1956"></div>
-      <h2>1957</h2>
-      <p>...</p>
-<div id="table1957"></div>
+<div id="leyenda">
+    <div class="containerD">
+        <div class="amarillo"> <!-- Columna de la izquierda para la imagen -->
+            <img src="ZZChisteAmarillo.jpg" alt="Descripción de la imagen" style="max-width: 100%; height: auto;"> <!-- Ajusta la ruta de la imagen -->
+        </div>
+        <div class="texto"> <!-- Columna de la derecha para el texto -->
+            <h2>Leyenda</h2>
+            <p>Bla bla bla</p>
+        </div>
+    </div>
+</div>
 
-    </main>
+
+
+
   </div>
 
 
-    <script>
-// Función para formatear valores de la columna TT
-function formatCeros(value) {
-    if (typeof value === "number") {
-        return value.toString().padStart(2, '0');
-    } else {
-        return value;
-    }
-}
-
-// Función para obtener la configuración de columnas
-function getColumnDefinitions() {
-    return [
-        {
-            title: "FECHA",
-            formatter: function (cell) {
-                const datos = cell.getData();
-                return `${datos.A}.${formatCeros(datos.MES)}.${formatCeros(datos.DIA)}`;
-            },
-            hozAlign: "center", width:80, sortable: false
-        },
-        {
-            title: "PUBLICACIÓN",
-            field: "P", width:120, sortable: false
-        },
-        {
-            title: "TÍTULO - DIÁLOGO",
-            sortable: false,
-            formatter: function (cell) {
-                const data = cell.getData();
-                return `<b>${data.T}</b> - <i style="color: LightSlateGray;">${data.D}</i>`;
-            }
-        },
-        {title: "PP", field: "PP",hozAlign: "center", width:20, sortable: false},{title: "TT", field: "TT",hozAlign: "center", width:20, sortable: false},
-        {title: "REVISTAS", field: "R"},{title: "COLECCIONES", field: "C"}
-
-        // Otras columnas...
-    ];
-}
-
-// Función para inicializar el Tabulator para diferentes JSON y tablas
-function initTabulator(data, tableId) {
-    new Tabulator(`#${tableId}`, {
-        data: data, // Datos de la fuente
-        layout: "fitColumns", // Ajusta las columnas al ancho del contenedor
-        columns: getColumnDefinitions(), // Llama a la función para obtener columnas
-    });
-}
-
-// Bucle para cargar múltiples JSON
-for (let year = 1948; year <= 1957; year++) {
-    const tableId = `table${year}`; // Crear el ID dinámico para la tabla
-    const fileName = `ZZ${year}.json`; // Crear el nombre del archivo dinámico
-
-    fetch(`https://kudomarkos.github.io/maldiciones/output/${fileName}`)
-        .then(response => response.json())
-        .then(data => {
-            initTabulator(data, tableId); // Inicializa Tabulator en la tabla correspondiente
-        })
-        .catch(error => console.error(`Error al cargar el JSON ${year}:`, error));
-}
-</script>
+<script src="tab.js"></script>
   </body>
 </html>
