--- a/zzcatalogoweb/index.html
+++ b/zzcatalogoweb/index.html
@@ -61,11 +61,40 @@ main.content {
 .tabulator .tabulator-header .tabulator-col.tabulator-sortable[aria-sort=none] .tabulator-col-content .tabulator-col-sorter {
   display: none
 }
-.tabulator-cell {
-  font-size: 10px
+
+    table {
+        border-collapse: collapse;
+        width: 100%; /* Opcional: para hacer que la tabla ocupe todo el ancho */
+        font-size: 10px;
+    }
+
+    th {
+        background-color: #333; /* Fondo gris oscuro */
+        color: white; /* Texto blanco */
+        font-weight: bold; /* Texto en negrita */
+        border: 1px solid black; /* Bordes de 1px */
+        padding: 8px; /* Espaciado alrededor del texto */
+    }
+
+td {
+    border: 1px solid black; /* Bordes de 1px */
+    padding: 8px; /* Espaciado alrededor del texto */
 }
 
+td:nth-child(3) {
+    width:500px;
+    overflow: hidden; /* Ocultar el texto que desborda */
+    text-overflow: ellipsis; /* Mostrar puntos suspensivos */
+    white-space: nowrap; /* Evitar que el texto se rompa en múltiples líneas */
+}
 
+    tr:nth-child(odd) {
+        background-color: #D3D3D3; /* Gris oscuro para filas impares */
+    }
+
+    tr:nth-child(even) {
+        background-color: white; /* Blanco para filas pares */
+    }
 </style>
 <link href="https://cdn.jsdelivr.net/npm/tabulator-tables@5.2.7/dist/css/tabulator.min.css" rel="stylesheet">
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/tabulator-tables@5.2.7/dist/js/tabulator.min.js"></script>
@@ -101,6 +130,6 @@ main.content {
   </div>
 
 
-<script src="tab.js"></script>
+<script src="tab2.js"></script>
   </body>
 </html>
