--- a/zzcatalogoweb/index.html
+++ b/zzcatalogoweb/index.html
@@ -61,6 +61,7 @@ main {
         border-collapse: collapse;
         width: 100%; /* Opcional: para hacer que la tabla ocupe todo el ancho */
         font-size: 10px;
+        margin-bottom:26px;
     }
 
     th {
@@ -148,8 +149,7 @@ main img {
     color: #34495e; /* Color del texto del significado */
 }
 </style>
-<link href="https://cdn.jsdelivr.net/npm/tabulator-tables@5.2.7/dist/css/tabulator.min.css" rel="stylesheet">
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/tabulator-tables@5.2.7/dist/js/tabulator.min.js"></script>
+
   </head>
   <body>
 
@@ -199,6 +199,6 @@ main img {
   </div>
 
 
-<script src="tab2.js"></script>
+<script src="tab.js"></script>
   </body>
 </html>
